fix fixed nav bar on overflow auto scroll

--- a/index.css
+++ b/index.css
@@ -58,6 +58,7 @@ html, body {
   float: right;
   background-color: white;
   overflow: auto;
+  position: relative;
 }
 
 .bio > h1 {
